fix: menu bug when switching from one dropdown to another on mobile devices and remove link cursor when hovering dropdowns

--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -107,7 +107,6 @@ link:focus,
   .dropdown {
     &:hover {
       .dropdown-menu {
-        display: block;
         visibility: visible;
         opacity: 1;
         transform: translateY(0)
@@ -164,6 +163,10 @@ link:focus,
         color: $primary-color;
         background: transparent;
       }
+    }
+
+    .default-cursor {
+      cursor: default;
     }
   }
 }
